# celestia-zkevm-hl-testnet

./: .env.example  Cargo.toml  Makefile  docker-compose.yml
crates/celestia-grpc-client/: Cargo.toml
crates/celestia-grpc-client/src/: client.rs  lib.rs  message.rs
crates/celestia-grpc-client/src/proto/: celestia.zkism.v1.rs  celestia.zkism.v1.tonic.rs
crates/e2e/: Cargo.toml
crates/e2e/src/utils/: block.rs  message.rs
crates/ev-prover/: Cargo.toml  README.md  build.rs
crates/ev-prover/src/: lib.rs  main.rs
crates/ev-prover/src/command/: cli.rs  mod.rs
crates/ev-prover/src/config/: mod.rs
crates/ev-prover/src/prover/: abi.rs  chain.rs  config.rs  mod.rs
crates/ev-prover/src/prover/programs/: batch.rs  block.rs  combined.rs  message.rs  mod.rs  range.rs
crates/ev-prover/src/server/: mod.rs
crates/ev-prover/src/tests/: storage.rs
crates/ev-prover/tests/: integration.rs
crates/ev-state-queries/: Cargo.toml
crates/ev-state-queries/src/hyperlane/: indexer.rs
crates/ev-state-queries/tests/: integration.rs
crates/ev-zkevm-types/: Cargo.toml
crates/ev-zkevm-types/src/programs/: block.rs
crates/ev-zkevm-types/src/programs/hyperlane/: types.rs
crates/sp1/: README.md
crates/sp1/ev-batch-exec/: README.md
crates/sp1/ev-batch-exec/program/: Cargo.toml
crates/sp1/ev-batch-exec/program/src/: main.rs
crates/sp1/ev-batch-exec/script/: Cargo.toml
crates/sp1/ev-exec/: README.md
crates/sp1/ev-exec/program/: Cargo.toml
crates/sp1/ev-exec/script/: Cargo.toml
crates/sp1/ev-hyperlane/: README.md
crates/sp1/ev-hyperlane/program/: Cargo.toml
crates/sp1/ev-hyperlane/program/src/: main.rs
crates/sp1/ev-hyperlane/script/: Cargo.toml
crates/sp1/ev-range-exec/: README.md
crates/sp1/ev-range-exec/program/: Cargo.toml
crates/sp1/ev-range-exec/program/src/: main.rs
crates/sp1/ev-range-exec/script/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: proofs.rs
crates/storage/src/hyperlane/: message.rs  mod.rs  snapshot.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md
elfs/: ev-hyperlane-elf  ev-range-exec-elf
hyperlane/: README.md  go.mod  go.sum  relayer-config.json
hyperlane/cmd/hyp/cmd/: cmd.go  events.go  hyperlane.go
hyperlane/configs/: core-config.yaml  warp-config.yaml
hyperlane/registry/chains/rethlocal/: addresses.yaml
hyperlane/registry/deployments/warp_routes/TIA/: rethlocal-config.yaml
testdata/benchmarks/: README.md
testdata/vkeys/: ev-batch-vkey-hash  ev-exec-vkey-hash  ev-hyperlane-vkey-hash  ev-range-exec-vkey-hash
testnet/ev-node/: entrypoint.sh
testnet/ev-node/config/: jwt.hex
