[workspace]
members = [
    "crates/e2e",
    "crates/ev-prover",
    "crates/ev-state-queries",
    "crates/ev-zkevm-types",
    "crates/sp1/ev-batch-exec/program",
    "crates/sp1/ev-batch-exec/script",
    "crates/sp1/ev-exec/program",
    "crates/sp1/ev-exec/script",
    "crates/sp1/ev-hyperlane/program",
    "crates/sp1/ev-hyperlane/script",
    "crates/sp1/ev-range-exec/program",
    "crates/sp1/ev-range-exec/script",
    "crates/storage",
]
resolver = "2"

[workspace.dependencies]
alloy = { version = "1.0.32", default-features = false }
alloy-consensus = { version = "1.0.32", default-features = false }
alloy-genesis = { version = "1.0.32", default-features = false }
alloy-primitives = { version = "1.2.0", default-features = false }
alloy-provider = { version = "1.0.32", default-features = false, features = [
    "ws",
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-rpc-types = { version = "1.0.32", default-features = false }
alloy-sol-types = "1.3"
alloy-trie = { version = "0.9.1", default-features = false }
anyhow = { version = "1.0", default-features = false }
async-trait = "0.1.88"
base64 = "0.22.1"
bech32 = "0.11.0"
bincode = "1.3.3"
bytes = "1.10.1"
celestia-grpc = "0.8.0"
celestia-rpc = "=0.13.0"
celestia-types = "=0.15.0"
chrono = "0.4"
cosmrs = { version = "0.22", features = ["grpc", "cosmwasm"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.1.0", features = ["alloc", "serde"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
ev-prover = { path = "crates/ev-prover" }
ev-state-queries = { path = "crates/ev-state-queries" }
ev-types = { version = "0.0.1", default-features = false }
ev-zkevm-types = { path = "crates/ev-zkevm-types" }
eyre = "0.6.12"
hex = "0.4.3"
jsonrpsee-core = "0.25.1"
md5 = "0.8.0"
nmt-rs = "*"
prost = "0.12"
reqwest = "0.12.20"
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.0", default-features = false }
rsp-client-executor = { git = "https://github.com/succinctlabs/rsp.git", tag = "reth-1.5.0" }
rsp-host-executor = { git = "https://github.com/succinctlabs/rsp.git", tag = "reth-1.5.0" }
rsp-primitives = { git = "https://github.com/succinctlabs/rsp.git", tag = "reth-1.5.0" }
rsp-rpc-db = { git = "https://github.com/succinctlabs/rsp.git", tag = "reth-1.5.0" }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha3 = "0.10"
sp1-build = "=5.2.2"
sp1-core-executor = { version = "=5.2.2", features = ["bigint-rug"] }
sp1-prover = "=5.2.2"
sp1-sdk = { version = "=5.2.2", features = ["native-gnark"] }
sp1-zkvm = "=5.2.2"
storage = { path = "crates/storage" }
tempfile = "3.8"
tendermint = "0.40.1"
tendermint-proto = "*"
thiserror = "2.0.17"
tokio = { version = "1.45.0", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
    "rt-multi-thread",
], default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.2"
url = { version = "2.5", default-features = false }

[patch.crates-io]
# Add support for precompiles: https://docs.succinct.xyz/docs/sp1/optimizing-programs/precompiles
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.9-sp1-4.0.0", package = "sha2" }
bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-5.0.0", package = "substrate-bn" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-5.0.0" }
