[package]
name = "celestia-grpc-client"
version = "0.2.0"
edition = "2021"
description = "gRPC client for Celestia consensus network and zk ism"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bech32 = { workspace = true }
bytes = { workspace = true }
celestia-grpc = { workspace = true }
clap = { version = "4", features = ["derive"] }
hex = { workspace = true }
k256 = "0.13"
prost = "0.13"
ripemd = "0.1.3"
prost-types = "0.13"
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = "0.12"
tracing = { workspace = true }
tracing-subscriber = "0.3"

[features]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[[bin]]
name = "client"
path = "src/bin/client.rs"
