[package]
name = "ev-prover"
version = "0.1.0"
edition = "2021"

[features]
batch_mode = []

[dependencies]
alloy = { workspace = true }
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
anyhow = "1.0"
async-trait = "0.1.88"
bincode = { workspace = true }
bytes = { workspace = true }
celestia-grpc-client = { path = "../celestia-grpc-client" }
celestia-rpc = { workspace = true }
celestia-types = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = { workspace = true }
dotenvy = { workspace = true }
ev-state-queries = { workspace = true }
ev-types = { workspace = true, features = ["grpc"] }
ev-zkevm-types = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
jsonrpsee-core = { workspace = true }
nmt-rs = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
reth-chainspec = { workspace = true }
rocksdb = "0.24"
rsp-client-executor = { workspace = true }
rsp-host-executor = { workspace = true }
rsp-primitives = { workspace = true }
rsp-rpc-db = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha3 = { workspace = true }
sp1-prover = { workspace = true }
sp1-sdk = { workspace = true }
storage = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.10", features = ["transport"] }
tonic-reflection = "0.10"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
