[package]
name = "ev-state-queries"
version = "0.2.0"
edition = "2024"

[dependencies]
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
ev-zkevm-types = { workspace = true }
serde_json = { workspace = true }
storage = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.17", default-features = false }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
