[package]
version = "0.1.0"
name = "ev-batch-program"
edition = "2021"

[dependencies]
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
bincode = { workspace = true }

celestia-types = { workspace = true }
ed25519-dalek = { workspace = true }
ev-types = { workspace = true }
ev-zkevm-types = { workspace = true }
hex = { workspace = true }
nmt-rs = "*"
prost = { workspace = true }
reth-primitives = { workspace = true }
rsp-client-executor = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_cbor = { workspace = true }
sha2 = "0.10.8"
sp1-zkvm = { workspace = true, features = ["verify"] }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
