[package]
version = "0.2.0"
name = "ev-hyperlane-script"
edition = "2021"
default-run = "ev-hyperlane"

[[bin]]
name = "ev-hyperlane"
path = "src/bin/main.rs"

[[bin]]
name = "vkey-ev-hyperlane"
path = "src/bin/vkey.rs"

[features]
retry = []

[dependencies]
alloy = { workspace = true }
alloy-eips = { version = "1.0.32" }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
celestia-grpc-client = { workspace = true }
clap = { version = "4.0", features = ["cargo", "derive", "env"] }
dirs = { workspace = true }
dotenvy = { workspace = true }
ev-zkevm-types = { workspace = true }
rustls = { workspace = true }
sp1-sdk = { workspace = true }
storage = { workspace = true }
tokio = { workspace = true }
url = { version = "2.5", default-features = false }

[build-dependencies]
sp1-build = "5.0.8"
