[package]
version = "0.1.0"
name = "ev-range-exec-program"
edition = "2021"

[dependencies]
bincode = { workspace = true }

celestia-types = { workspace = true }
ev-zkevm-types = { workspace = true }
hex = { workspace = true }
nmt-rs = "*"
rsp-client-executor = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
sha2 = "0.10.8"
sp1-primitives = { workspace = true }
sp1-zkvm = { workspace = true, features = ["verify"] }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
